--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -30,7 +30,7 @@
 		<div class="mui-content" style="background-color: white;">
 			<div id="expertInfo" style="height: 150px;background-image:url(../../image/quan/leave-bg.png) ;"><br/>
 				<div style="text-align: center;">
-                    <img id="expertImg" style="width: 50px;height: 50px;" src="../../image/utils/default_personalimage.png" />
+                    <img id="expertImg" style="width: 50px;height: 50px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" />
 				</div>
 				<div style="text-align: center;">
 					<h4 id="ExpertChannels"></h4>
