--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -74,6 +74,12 @@
 	mui.plusReady(function() {
 		//25.获取某个用户的提问列表
 		getAsksByUser(1);
+		mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+			var index = this.id.replace('li', '');
+			events.fireToPageNone('qiuzhi-question.html', datasource[index].AskId);
+			events.fireToPageNone('qiuzhi-questionSub.html', 'askId', datasource[index].AskId);
+			plus.webview.getWebviewById('qiuzhi-question.html').show();
+		})
 		mui(".mui-scroll-wrapper .mui-scroll").pullToRefresh({
 			down: {
 				callback: function() {
@@ -140,10 +146,11 @@
 		for(var i = 0; i < datasource.length; i++) {
 			var list = document.getElementById("list-container");
 			var li = document.createElement("li");
+			li.id = 'li' + i;
 			li.className = 'mui-table-view-cell';
 			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
 				'<h4 class="mui-ellipsis">' + datasource[i].AskTitle +
-				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答 ' + datasource[i].AskTime +' ' +datasource[i].FocusNum + '关注</p></div></div>'
+				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答 ' + datasource[i].AskTime + ' ' + datasource[i].FocusNum + '关注</p></div></div>'
 			list.appendChild(li);
 		}
 
