--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -8,22 +8,23 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet">
 		<link href="../../css/qiuzhi/attention-persons.css" rel="stylesheet" />
-		</head>
+	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">关注他的人</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">关注他的人</h1>
 		</header>
-		<div class="mui-content mui-scroll-wrapper">
-		    <div class="mui-scroll">
-		        <!--这里放置真实显示的DOM内容-->
-		        <ul id="list-container" class="mui-table-view">
-		                
-		        </ul>
-		    </div>
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<!--数据列表-->
+
+				<ul id="list-container" class="mui-table-view">
+				</ul>
+			</div>
 		</div>
-		
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/utils/events.js"></script>
