--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -37,8 +37,8 @@
 			var ExpertsInfo; //专家详细页传来的 专家信息
 			var pageIndex = 1; //请求数据页面
 			var totalPageCount; //总页码
-			var flagRef = 0;//是刷新0，还是加载更多1
-			var answerArray = [];//回答总数组
+			var flagRef = 0; //是刷新0，还是加载更多1
+			var answerArray = []; //回答总数组
 
 			mui.init();
 
@@ -47,7 +47,7 @@
 				window.addEventListener('qiuzhi-expertAllComment', function(event) {
 					//赋值
 					ExpertsInfo = event.detail.data;
-					console.log('专家回答页传值：'+JSON.stringify(ExpertsInfo));
+					console.log('专家回答页传值：' + JSON.stringify(ExpertsInfo));
 					//清除节点
 					document.getElementById('list-container').innerHTML = "";
 					//33.获取某个用户的评论列表
@@ -76,8 +76,9 @@
 							flagRef = 1;
 							if(pageIndex < totalPageCount) {
 								//33.获取某个用户的评论列表
+								pageIndex++;
 								getCommentsByUser(ExpertsInfo.UserId);
-							}else{
+							} else {
 								mui.toast('没有更多了');
 							}
 							self.endPullUpToRefresh();
@@ -104,9 +105,9 @@
 					if(data.RspCode == 0) {
 						//总页数
 						totalPageCount = data.RspData.TotalPage;
-						if (flagRef == 0) {//刷新
+						if(flagRef == 0) { //刷新
 							answerArray = data.RspData.Data;
-						} else{//加载更多
+						} else { //加载更多
 							pageIndex++;
 							//合并数组
 							answerArray = answerArray.concat(data.RspData.Data);
@@ -138,8 +139,29 @@
 				li.className = 'mui-table-view-cell';
 				//拼接显示
 				//li.innerHTML = "<p>" + record.CommentContent + "</p><div><p><img src='"+record.qChannelImg+"'>["+record.qChannel+"]"+record.AskTitle+"</p><p>"+record.AnswerContent+"</p></div><p>"+record.LikeNum+" 赞 · "+record.cCreatTime + " ·"+record.CommentId+" 关注</p>";
-				li.innerHTML = "<p>" + record.CommentContent + "</p><div><p><img src='"+record.qChannelImg+"'>[频道没给]"+record.AskTitle+"</p><p>"+record.AnswerContent+"</p></div><p>"+record.LikeNum+" 赞 · 评论时间没给 ·关注数没给  关注</p>";
+				li.innerHTML = "<p>" + record.CommentContent + "</p><div><p><img src='" + getChannelIcon(record) + "'>[频道没给]" + record.AskTitle + "</p><p>" + record.AnswerContent + "</p></div><p>" + record.LikeNum + " 赞 · 评论时间没给 ·关注数没给  关注</p>";
 				listContainer.appendChild(li);
+			}
+			var getChannelIcon = function(cell) {
+				var iconSourse = "../../image/qiuzhi/";
+				switch(cell.AskChannel) {
+					case "教学":
+						iconSourse += "channel-edu.png";
+						break;
+					case "美食":
+						iconSourse += "channel-food.png";
+						break;
+					case "健康":
+						iconSourse += "channel-health.png";
+						break;
+					case "其他":
+						iconSourse += "channel-others.png";
+						break;
+					default:
+						iconSourse = "";
+						break;
+				}
+				return iconSourse;
 			}
 		</script>
 	</body>
