调整专家列表和云存储的界面逻辑

--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -68,6 +68,7 @@
 				/*background: red;*/
 				text-align: center;
 				/*min-width: 10px;*/
+				font-size: 20px;
 			}
 
 			#top {
@@ -83,37 +84,37 @@
 
 			.move-out-left {
 				/*从左边移出屏幕*/
-				animation: move-out-left 0.4s;
-				-moz-animation: move-out-left 0.4s;
-				-webkit-animation: move-out-left 0.4s;
-				-o-animation: move-out-left 0.4s;
+				animation: move-out-left 0.2s;
+				-moz-animation: move-out-left 0.2s;
+				-webkit-animation: move-out-left 0.2s;
+				-o-animation: move-out-left 0.2s;
 				animation-fill-mode: forwards;
 			}
 
 			.move-out-right {
 				/*从右边移出屏幕*/
-				animation: move-out-right 0.4s;
-				-moz-animation: move-out-right 0.4s;
-				-webkit-animation: move-out-right 0.4s;
-				-o-animation: move-out-right 0.4s;
+				animation: move-out-right 0.2s;
+				-moz-animation: move-out-right 0.2s;
+				-webkit-animation: move-out-right 0.2s;
+				-o-animation: move-out-right 0.2s;
 				animation-fill-mode: forwards;
 			}
 
 			.move-in-left {
 				/*从左边移进屏幕*/
-				animation: move-in-left 0.4s;
-				-moz-animation: move-in-left 0.4s;
-				-webkit-animation: move-in-left 0.4s;
-				-o-animation: move-in-left 0.4s;
+				animation: move-in-left 0.2s;
+				-moz-animation: move-in-left 0.2s;
+				-webkit-animation: move-in-left 0.2s;
+				-o-animation: move-in-left 0.2s;
 				animation-fill-mode: forwards;
 			}
 
 			.move-in-right {
 				/*从右边移进屏幕*/
-				animation: move-in-right 0.4s;
-				-moz-animation: move-in-right 0.4s;
-				-webkit-animation: move-in-right 0.4s;
-				-o-animation: move-in-right 0.4s;
+				animation: move-in-right 0.2s;
+				-moz-animation: move-in-right 0.2s;
+				-webkit-animation: move-in-right 0.2s;
+				-o-animation: move-in-right 0.2s;
 				animation-fill-mode: forwards;
 			}
 
