--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -30,7 +30,7 @@
 		<div class="mui-content" style="background-color: white;">
 			<div id="expertInfo" style="height: 150px;background-image:url(../../image/quan/leave-bg.png) ;"><br/>
 				<div style="text-align: center;">
-                    <img id="expertImg" style="width: 50px;height: 50px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" />
+					<img id="expertImg" style="width: 50px;height: 50px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" />
 				</div>
 				<div style="text-align: center;">
 					<h4 id="ExpertChannels"></h4>
@@ -102,7 +102,7 @@
 
 	<script type="text/javascript">
 		var nodes = {
-			expertImg:document.getElementById("expertImg"),
+			expertImg: document.getElementById("expertImg"),
 			AskNum: document.getElementById("AskNum"),
 			UserNote: document.getElementById("UserNote"),
 			FocusManNum: document.getElementById("FocusManNum"),
@@ -114,44 +114,49 @@
 			IsFocusedManNum: document.getElementById("IsFocusedManNum"),
 			AnswerNum: document.getElementById("AnswerNum"),
 			inviteNum: document.getElementById("inviteNum"),
-			focusBtn:document.getElementById("focusBtn"),
+			focusBtn: document.getElementById("focusBtn"),
 
 		}
 		var ExpertsInfo;
 		mui.plusReady(function() {
-			events.preload('AttentionPersons.html',10);
-			events.preload('qiuzhi-expertAllAnswer.html',10);
-			events.preload('qiuzhi-expertAllComment.html',10);
+			events.preload('AttentionPersons.html', 10);
+			events.preload('qiuzhi-expertAllAnswer.html', 10);
+			events.preload('qiuzhi-expertAllComment.html', 10);
+			events.preload('focus-question.html', 10);
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			ExpertsInfo = main.data; //接收页面传入参数值，传过来的专家model
 			console.log('expert-detail.html:' + JSON.stringify(ExpertsInfo));
 			//3.获取某个用户的信息
 			getExpertsInfo(ExpertsInfo.UserId);
-			nodes.expertImg.src = updateHeadImg(ExpertsInfo.uimg,2);
+			nodes.expertImg.src = updateHeadImg(ExpertsInfo.uimg, 2);
 
 			//22.获取是否已对某个用户关注
 			getUserFocus(ExpertsInfo.UserId);
 			mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 				console.log(this.id);
 				if(this.id == 'AnswerLi') { //他的回答
-					events.fireToPageWithData('qiuzhi-expertAllAnswer.html','qiuzhi-expertAllAnswer',ExpertsInfo);
+					events.fireToPageWithData('qiuzhi-expertAllAnswer.html', 'qiuzhi-expertAllAnswer', ExpertsInfo);
 				} else if(this.id == 'AskLi') { //他的提问
 					events.openNewWindowWithData('expert-ask.html', ExpertsInfo);
 				} else if(this.id == 'CommentLi') { //他的评论
-					events.fireToPageWithData('qiuzhi-expertAllComment.html','qiuzhi-expertAllComment',ExpertsInfo);
+					events.fireToPageWithData('qiuzhi-expertAllComment.html', 'qiuzhi-expertAllComment', ExpertsInfo);
 				} else { //邀请他的回答
 					events.openNewWindowWithData('qiuzhi-inviteAnswer.html', ExpertsInfo);
 				}
 			})
 			events.addTap('FocusAsk', function() {
 				console.log('关注的问题');
+				events.fireToPage('focus-question.html', 'focus-question', function() {
+					return ExpertsInfo;
+				})
 
 			})
 			events.addTap('FocusMan', function() {
 				console.log('他关注的人');
+
 			})
 			events.addTap('IsFocusedMan', function() {
-				events.fireToPageWithData('AttentionPersons.html','expertInfo',ExpertsInfo);
+				events.fireToPageWithData('AttentionPersons.html', 'expertInfo', ExpertsInfo);
 				console.log('关注他的人');
 			})
 			events.addTap('focusBtn', function() {
@@ -236,9 +241,9 @@
 					//刷新界面显示
 					console.log(nodes.focusBtn.innerText);
 					//刷新界面显示
-					if(nodes.focusBtn.innerText == '已关注'){
+					if(nodes.focusBtn.innerText == '已关注') {
 						nodes.focusBtn.innerText = '关注'
-					}else{
+					} else {
 						nodes.focusBtn.innerText = '已关注'
 					}
 
