去除展现和科教逻辑

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
@@ -18,7 +18,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			events.initSubPage('qiuzhi-answerDetailSub.html')
+			events.initSubPage('qiuzhi-answerDetailSub.html',null,0,50);
 		</script>
 	</body>
 
