--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -29,7 +29,7 @@
 					</a>
 					<p>导航</p>
 				</div>
-				<div id="sliderGroup" class="mui-slider-group"style="height: 1px;">
+				<div id="sliderGroup" class="mui-slider-group" style="height: 1px;">
 					<div id="defalut" class="mui-slider-item mui-control-content mui-active"></div>
 				</div>
 			</div>
@@ -50,6 +50,8 @@
 		//			getExpertsArray();
 		//3.获取某个用户的信息
 		//			getExpertsInfo(33);
+		//4.获取所有符合条件问题
+		//			getAsksByCondition('天空');
 		//7.修改某个用户的某个问题
 		//			setAskById(35);
 		//10.修改某个用户的某条回答
@@ -149,6 +151,29 @@
 			postDataQZPro_getUserInfo(comData, wd, function(data) {
 				wd.close();
 				console.log('3.获取某个用户的信息:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+
+				} else {
+					mui.toast(data.RspTxt);
+				}
+			});
+		};
+
+		//4.获取所有符合条件问题
+		function getAsksByCondition(askTitle) {
+			//需要加密的数据
+			var comData = {
+				askTitle: askTitle, //问题标题,用于查找，可输入部分标题
+				channelId: '0', //话题ID,传入0，获取所有话题数据
+				pageIndex: '1', //当前页数
+				pageSize: '10' //每页记录数,传入0，获取总记录数
+			};
+			// 等待的对话框
+			var wd = events.showWaiting();
+			//4.获取所有符合条件问题
+			postDataQZPro_getAsksByCondition(comData, wd, function(data) {
+				wd.close();
+				console.log('4.获取所有符合条件问题:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 				if(data.RspCode == 0) {
 
 				} else {
@@ -513,7 +538,7 @@
 			//需要加密的数据
 			var comData = {
 				userId: personalUTID, //用户ID
-				focusId:focusId,//关注用户ID,查看用户
+				focusId: focusId, //关注用户ID,查看用户
 				pageIndex: '1', //当前页数
 				pageSize: 0 //每页记录数,传入0，获取总记录数
 			};
