--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -15,10 +15,10 @@
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<div class="question-container">
+				<div id="question-container" class="question-container">
 					<h4 id="question-title" class="question-title"></h4>
 				</div>
-				<div class="anthor-container">
+				<div id="anthor-container" class="anthor-container">
 					<img id="anthor-portrait" class="img-portrait display-inlineBlock"/>
 					<div class="export-info display-inlineBlock">
 						<h5 id="anthor-name"></h5>
@@ -31,8 +31,8 @@
 					<div id="img-container"></div>
 				</div>
 				<div class="comments-info">
-					<p id="comments-no" class="mui-pull-left"></p>
-					<select id="order-selector" class="mui-pull-right order-selector display-inlineBlock">
+					<p id="comments-no" class="comment-no mui-pull-left">你好</p>
+					<select id="order-selector"  class="mui-pull-right order-selector display-inlineBlock">
 						<option value="2">倒序排列</option>
 						<option value="1">顺序排列</option>
 					</select>
@@ -42,10 +42,16 @@
 			</div>
 			
 		</div>
-		<div class="input-footerContainer">
+		<nav class="mui-bar mui-bar-tab" style="background: white;box-shadow: none;padding-top: 6px;">
+			<span class="mui-icon iconfont icon-xie mui-pull-left" style="color: gray;line-height: 34px;padding: 0px;margin-left: 10px;margin-right: 10px;"></span>
+			<div id="tab_div" style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
+				<font id="tab_font">请输入答案评论</font>
+			</div>
+		</nav>
+		<!--<div class="input-footerContainer">
 				<input  id="input-content" type="text" class="input-text" />
 				<a id="send-comment" class="mui-icon iconfont icon-fasong send-icon"></a>
-			</div>
+			</div>-->
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
