--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -8,31 +8,31 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../../css/quan/custom-textarea.css"/>
+		<link rel="stylesheet" type="text/css" href="../../css/quan/custom-textarea.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title" style="color: white;">我要回答</h1>
+			<h1 id="title" class="mui-title" style="color: white;">我要回答</h1>
 			<h1 id="submitBtn" class="mui-icon mui-icon-right-nav mui-pull-right" style="text-align: right;right: 10px;font-size: 15px;">提交</h1>
 		</header>
 
 		<div class="mui-content">
 			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>
 			<div class="input-content">
-				<textarea id="answerContent" placeholder="添加回答"></textarea>
-				<div id="take_pic" class="take_pic">
+				<textarea id="answerContent" placeholder="添加回答,最多4000字"></textarea>
+				<div id="take_pic" class="take_pic file-extras">
 					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
-				<div id="take_camero" class="take_camero">
+				<div id="take_camero" class="take_camero file-extras">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
-				<div id="get_gallery" class="get_gallery">
+				<div id="get_gallery" class="get_gallery file-extras">
 					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
 			</div>
-			<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
+			<div class="mui-input-row mui-checkbox mui-left file-extras" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
 				<label>匿名</label>
 				<input id="checkbox" name="checkbox" value="" type="checkbox">
 			</div>
@@ -46,81 +46,127 @@
 			mui.init();
 			//将传值到的标题显示
 			var askModel; //问题model
+			var answerInfo; //答案信息
+			var type = 0; //0：回答问题，1：评论答案
 			//传值接收方法
-			window.addEventListener('qiuzhi-addAnswer', function(event) {
-				askModel = event.detail.data;
-				var askTitle = document.getElementById("askTitle");
-				askTitle.innerHTML = askModel.AskTitle;
-			});
 			mui.plusReady(function() {
-				mui('#ExpertList').on('tap', '.checkbox', function() {
-					this.checked = !this.checked;
-					window.event.stopPropagation();
+				jQuery('#answerContent').prop("maxLength", "4000");
+				window.addEventListener('qiuzhi-addAnswer', function(event) {
+					type = 0;
+					askModel = event.detail.data;
+					document.getElementById('title').innerText='我要回答';
+					document.querySelectorAll('.file-extras').forEach(function(item) {
+						item.style.display = 'inline-block'
+					})
+					var askTitle = document.getElementById("askTitle");
+					askTitle.innerHTML = askModel.AskTitle;
+				});
+				//加载评论
+				window.addEventListener('add-comment', function(e) {
+					type = 1;
+					document.getElementById('title').innerText='我要评论';
+					document.querySelectorAll('.file-extras').forEach(function(item) {
+						item.style.display = 'none';
+					})
+					answerInfo = e.detail.data;
+					document.getElementById('askTitle').innerText = answerInfo.AnswerContent;
 				})
+				setListener();
 			});
-			
-			events.addTap('take_pic', function() {
-				mui.toast('此功能暂未开放');
-				//				camera.getPic(camera.getCamera(), function(path) {
-				//
-				//				});
-			});
-			events.addTap('take_camero', function() {
-				mui.toast('此功能暂未开放');
-				//				camera.getVideo(camera.getCamera(), function(path) {
-				//
-				//				});
-			});
-			events.addTap('get_gallery', function() {
-				mui.toast('此功能暂未开放');
-				//				gallery.getMultiplePic(function(paths) {
-				//
-				//				});
-			});
+			var setListener = function() {
+				events.addTap('take_pic', function() {
+					mui.toast('此功能暂未开放');
+					//				camera.getPic(camera.getCamera(), function(path) {
+					//
+					//				});
+				});
+				events.addTap('take_camero', function() {
+					mui.toast('此功能暂未开放');
+					//				camera.getVideo(camera.getCamera(), function(path) {
+					//
+					//				});
+				});
+				events.addTap('get_gallery', function() {
+					mui.toast('此功能暂未开放');
+					//				gallery.getMultiplePic(function(paths) {
+					//
+					//				});
+				});
 
-			//提交按钮
-			events.addTap('submitBtn', function() {
+				//提交按钮
+				events.addTap('submitBtn', function() {
+					var answerContent = jQuery.trim(document.getElementById("answerContent").value);
+					if(answerContent) {
+						if(type) { //评论答案
+							addComment(answerContent);
+						} else { //回答问题
+							addAnswer(answerContent);
+						}
+					} else {
+						mui.toast('请输入内容');
+					}
+				});
+			}
+			/**
+			 * 回答问题
+			 */
+			var addAnswer = function(answerContent) {
 				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
-				var answerContent = Trim(document.getElementById("answerContent").value);
-				if(!answerContent || answerContent == '') {
-					mui.toast('请输入内容');
-					return;
-				} else if(answerContent.length > 4000) {
-					mui.toast('不能超过4000字');
-					return;
-				}
-				var checkboxBtn = document.getElementById("checkbox");
-				if (checkboxBtn.checked) {
-//					personalUTID = '';
-				}
 				
+				var isAnonym=document.getElementById('checkbox').checked;
+				var isAnonymNo=isAnonym?1:0;
+				console.log('是否显示匿名：'+isAnonym);
 				//所需参数
 				var comData = {
 					askId: askModel.TabId, //问题ID
 					answerContent: answerContent, //回答内容,4000
 					encAddr: '', //附件地址,300,多个的情况例如：1.jpg|2.jpg
-					answerMan: personalUTID //回答人
+					answerMan: personalUTID,//回答人
+					isAnonym:isAnonymNo
 				};
 				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				var wd = events.showWaiting();
 				//9.新增某个用户回答问题
 				postDataQZPro_addAnswer(comData, wd, function(data) {
 					wd.close();
 					console.log('9.新增某个用户回答问题:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
-						mui.toast('回答成功')
+						mui.toast('回答成功');
 						document.getElementById("answerContent").value = '';
-						events.fireToPageNone('qiuzhi-questionSub.html','answerAdded');
+						events.fireToPageNone('qiuzhi-questionSub.html', 'answerAdded');
 						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
 					}
 				});
-
-			});
-			//去除前后空格
-			function Trim(str) {
-				return str.replace(/(^\s*)|(\s*$)/g, "");
+			}
+			/**
+			 * 增加评论
+			 * @param {Object} commentValue
+			 */
+			var addComment = function(commentValue) {
+				var pId = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
+				var wd = events.showWaiting();
+				postDataQZPro_addAnswerComment({
+					answerId: answerInfo.AnswerId, //回答ID
+					upperId: 0, //上级评论ID,第一个评论传0，其他的传最上层的ID
+					userId: pId, //评论用户ID,
+					commentContent: commentValue, //评论内容
+					replyId: 0 //回复用户ID,新增评论的话传0，回复评论传用户Id
+				}, wd, function(data) {
+					wd.close();
+					console.log('评论结果:' + JSON.stringify(data))
+					if(data.RspCode == 0) {
+						if(data.RspData.Result) {
+							document.getElementById('answerContent').value = '';
+							mui.toast('评论成功！')
+							events.fireToPageNone('qiuzhi-answerDetailSub.html', 'commentAdded');
+							mui.back();
+						}
+					} else {
+						mui.toast('评论失败，请重新提交评论！');
+					}
+				})
 			}
 		</script>
 	</body>
