科教懒加载

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -33,7 +33,7 @@
 				<span class="mui-icon iconfont icon-yunpan1"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
-			<a id="tabclass" class="mui-tab-item" href="../scienceeducation/scienceeducation_home.html">
+			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
 				<span class="mui-icon iconfont icon-jiaoyu"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
